--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   cupertino_icons: ^0.1.3
   http: ^0.12.2
   characters: ^1.0.0
+  json_serializable: ^3.5.1
+  uuid: ^2.2.2
+  path_provider: ^1.6.14
 
 dev_dependencies:
   flutter_test:
